feat: update datagen to use the provider + subprovider pattern vanilla favours